--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,3 +1,19 @@
+/* Coolors Exported Palette - coolors.co/bcf8ec-aed9e0-9fa0c3-8b687f-7b435b */
+
+/* HSL */
+$color1: hsla(168%, 81%, 85%, 1);
+$color2: hsla(188%, 45%, 78%, 1);
+$color3: hsla(238%, 23%, 69%, 1);
+$color4: hsla(321%, 14%, 48%, 1);
+$color5: hsla(334%, 29%, 37%, 1);
+
+/* RGB */
+$color1: rgba(188, 248, 236, 1);
+$color2: rgba(174, 217, 224, 1);
+$color3: rgba(159, 160, 195, 1);
+$color4: rgba(139, 104, 127, 1);
+$color5: rgba(123, 67, 91, 1);
+
 .App {
   text-align: center;
 }
