--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -64,6 +64,26 @@ $color5: rgba(84, 45, 62, 1);
   }
 }
 
+// /* unvisited link */
+// a:link {
+//   color: red;
+// }
+
+// /* visited link */
+// a:visited {
+//   color: green;
+// }
+
+// /* mouse over link */
+// a:hover {
+//   color: hotpink;
+// }
+
+// /* selected link */
+// a:active {
+//   color: blue;
+// }
+
 body {
   background-color: hsla(321, 15%, 35%, 1);
   // Photo Credit Tom The Photographer https://unsplash.com/@tomthephotographer
@@ -71,13 +91,90 @@ body {
   linear-gradient(to bottom, hsla(321, 15%, 35%, 0.5), hsla(334, 75%, 10%, 1)),
   url('https://raw.githubusercontent.com/tilleraj/hitch-a-ride/master/assets/images/background.jpg');
   background-size: auto 150vh;
+  background-position: top center;
 }
+
 .card {
   box-shadow: 4px 6px 10px -4px rgba(0, 0, 0, 0.25);
   background-color:   hsla(60, 80%, 95%, 0.75);
   padding: 1em;
 }
 
+.form-control {
+  background-color: hsla(60, 80%, 97%, 0.75);
+}
+
+.form-control:focus {
+  background-color: hsla(60, 25%, 97%, 0.75);
+}
+
 table {
   margin-bottom: 0!important;
 }
+
+
+// .btn-primary{
+//   color:#fff;
+//   background-color:teal;
+//   border-color:#005a5a;
+// }
+// .btn-primary:hover{
+//   color:#fff;
+//   background-color:#004d4d;
+//   border-color:#009a9a;
+// }
+// .btn-primary:focus,
+// .btn-primary.focus{
+//   box-shadow:0 0 0 .2rem rgba(0,90,90,0.5);
+// }
+// .btn-primary.disabled,
+// .btn-primary:disabled{
+//   color:#fff;
+//   background-color:teal;
+//   border-color:#005a5a;
+// }
+// .btn-primary:not(:disabled):not(.disabled):active,
+// .btn-primary:not(:disabled):not(.disabled).active,
+// .show>.btn-primary.dropdown-toggle{
+//   color:#fff;
+//   background-color:#00b3b3;
+//   border-color:#000;
+// }
+// .btn-primary:not(:disabled):not(.disabled):active:focus,
+// .btn-primary:not(:disabled):not(.disabled).active:focus,
+// .show>.btn-primary.dropdown-toggle:focus{
+//   box-shadow:0 0 0 .2rem rgba(0,90,90,0.5);
+// }
+
+// .btn-outline-primary{
+//   color:teal;
+//   background-color:transparent;
+//   background-image:none;
+//   border-color:teal
+// }
+// .btn-outline-primary:hover{
+//   color:#222;
+//   background-color:#009a9a;
+//   border-color:teal;
+// }
+// .btn-outline-primary:focus,
+// .btn-outline-primary.focus{
+//   box-shadow:0 0 0 .2rem rgba(0,128,128,0.5);
+// }
+// .btn-outline-primary.disabled,
+// .btn-outline-primary:disabled{
+//   color:teal;
+//   background-color:transparent;
+// }
+// .btn-outline-primary:not(:disabled):not(.disabled):active,
+// .btn-outline-primary:not(:disabled):not(.disabled).active,
+// .show>.btn-outline-primary.dropdown-toggle{
+//   color:#fff;
+//   background-color:#009a9a;
+//   border-color:teal;
+// }
+// .btn-outline-primary:not(:disabled):not(.disabled):active:focus,
+// .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
+// .show>.btn-outline-primary.dropdown-toggle:focus{
+//   box-shadow:0 0 0 .2rem rgba(0,128,128,0.5);
+// }
